# ExamGen

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml
img/: diagram.drawio
src/examgen/: main.py  pdfextract.py  pipeline.py  signatures.py  tools.py
src/examgen/static/: style.css  style_dark.css  style_dark_quiz.css  style_light.css  style_light_quiz.css  style_modern.css  style_modern_quiz.css
src/examgen/templates/: error.html  index.html  quiz.html  results.html
